--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <title>Portfolio    |   Kara Bruce</title>
+        <!--Material Design Lite-->
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css"
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+        <!---Custom Styles--->
+        <link rel="stylesheet" href="styles/main.css"
     </head>
     <body>
-        <header>
+        <header class="mdl-layout__header mdl-layout__header--transparent">
             <h1>Kara Bruce</h1>
             <p class="slogan">UX & UI Designer with a keen interest in Frontend Development.</p>
         </header>
