--- a/index.html
+++ b/index.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html class="mdl-js">
-    <head>
-        <title>Portfolio    |   Kara Bruce</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--Material Design Lite-->
-        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
 
-        <!---I added these from -->
-        <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>    
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="http://fontawesome.github.io/Font-Awesome/3.2.1/assets/font-awesome/css/font-awesome.css">
+<head>
+    <title>Portfolio | Kara Bruce</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Material Design Lite-->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
 
-        <!--<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
+    <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/v4-shims.js"></script>
 
-        <!---Font Awesome-->
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!---I added these from
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
+        integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous">
+    </script>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="http://fontawesome.github.io/Font-Awesome/3.2.1/assets/font-awesome/css/font-awesome.css">-->
 
-        <!---Custom Styles--->
-        <link rel="stylesheet" href="styles/main.css" type="text/css">
+    <!--<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
+
+    <!---Font Awesome-->
+    <!--THIS DID NOT WORK:
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <!--this did-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/v4-shims.css">-->
+
+    <!---Custom Styles--->
+    <link rel="stylesheet" href="styles/main.css" type="text/css">
+
+    <!--THESE CAME UP WITH WARNINGS in the DOMS
         <link rel="stylesheet" href="~/lib/Font-Awesome/css/fontawesome.min.css">
-        <link rel="stylesheet" href="~/lib/Font-Awesome/css/all.min.css">>
-    </head>
-    <body>
-        <header class="mdl-layout__header mdl-layout__header--transparent">
-            <h1>Kara Bruce</h1>
-            <p class="slogan">UX & UI Designer with a keen interest in Frontend Development.</p>
-        </header>
-        <main>
-            <main class="mdl-layout__content mdl-grid">
-                <div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-card mdl-shadow--4dp">
+    <link rel="stylesheet" href="~/lib/Font-Awesome/css/all.min.css">-->
+</head>
+
+<body>
+    <header class="mdl-layout__header mdl-layout__header--transparent">
+        <h1>Kara Bruce</h1>
+        <p class="slogan">UX & UI Designer with a keen interest in Frontend Development.</p>
+    </header>
+    <main>
+        <main class="mdl-layout__content mdl-grid">
+            <div
+                class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-card mdl-shadow--4dp">
                 <div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet">
                     <img src="http://lorempixel.com/350/260/abstract/placeholder-1">
                 </div>
@@ -36,7 +51,7 @@
                     <h2>Featured Project Name</h2>
                     <p>Project description text</p>
                 </div>
-                </div>
+            </div>
             <div class="project mdl-cell mdl-card mdl-shadow--4dp">
                 <div>
                     <img src="http://lorempixel.com/350/260/abstract/placeholder-2">
@@ -48,7 +63,7 @@
                 </div>
             </div>
 
-           <div class="project mdl-cell mdl-card mdl-shadow--4dp">
+            <div class="project mdl-cell mdl-card mdl-shadow--4dp">
                 <div>
                     <img src="http://lorempixel.com/350/260/abstract/placeholder-3">
                 </div>
@@ -73,30 +88,28 @@
         </main>
         <footer class="mdl-mini-footer">
             <ul class="mdl-mini-footer__link-list">
-                <li><a href"https://www.linkedin.com/in/karabruce/">
-                    <i class="fas fa-linkedin-square" aria-hidden="true"></i>
+                <li><a href"https://www.linkedin.com/in/karabruce/"> <i class="fab fa-linkedin"
+                        aria-hidden="true"></i>
                     </a>
                 </li>
 
-                <li><a href"https://github.com/kindasortamaybe3">
-                    <i class="fas fa-github-square" aria-hidden="true">
+                <!--<li><a href"https://github.com/kindasortamaybe3"> <i class="fab fa-github-square" aria-hidden="true">
+                    </a>
+                </li>-->
+                <li><a href"https://www.facebook.com/kara.gaetzbruce"> <i class="fab fa-facebook-square"
+                        aria-hidden="true"></i>
                     </a>
                 </li>
-                <li><a href"https://www.facebook.com/kara.gaetzbruce">
-                    <i class="fas fa-facebook-square" aria-hidden="true"></i>
-                    </a>
-                </li>
-                <li><a href"https://twitter.com/KaraGaetzBruce">
-                    <i class="fas fa-twitter-square" area-hidden="true"></i>
+                <li><a href"https://twitter.com/KaraGaetzBruce"> <i class="fab fa-twitter-square"
+                        area-hidden="true"></i>
                     </a>
                 </li>
                 <li><a href"mailto:kindasortamaybe3@gmail.com">
-                    <i class="fas fa-envelope-square" area-hidden="true"></i>
-                   </a>
+                        <i class="fas fa-envelope-square" area-hidden="true"></i>
+                    </a>
                 </li>
             </ul>
         </footer>
-    </body>
+</body>
+
 </html>
-
-
