trying to find it

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/v4-shims.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/v4-shims.js"></script>
 
     <!---I added these from
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
@@ -93,9 +93,11 @@
                     </a>
                 </li>
 
-                <!--<li><a href"https://github.com/kindasortamaybe3"> <i class="fab fa-github-square" aria-hidden="true">
+                <!--FOR SOME REASON THIS ONE IS PROBLEMATIC AND CREATES MANY GITHUBS-->
+                    <li><a href"https://github.com/kindasortamaybe3"> <i class="fab fa-github-square"
+                        aria-hidden="true"></i>
                     </a>
-                </li>-->
+                </li>
                 <li><a href"https://www.facebook.com/kara.gaetzbruce"> <i class="fab fa-facebook-square"
                         aria-hidden="true"></i>
                     </a>
